2000-02-09  Alexander V. Lukyanov  <lav@yars.free.net>

	* CopyJob.cc, CopyJob.h: don't use putchar; print summary when Done().
	* pgetJob.cc: don't use putchar.
	* mgetJob.cc: don't print empty line.

2000-02-08  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileCopy.cc: don't show rate when put==0.
	* Makefile.am: remove ftpget.o.
	* SMTask.cc, SMTask.h: (current) new static member; empty all block's
	  before calling all Do's.
	* NetAccess.cc: (DelayingMessage) use current->Timeout.
	* PollVec.h: add GetTimeout for debugging.
	* Speedometer.cc: use current->Timeout.
	* StatusLine.cc: use TimeoutS.

2000-02-06  Alexander V. Lukyanov  <lav@yars.free.net>

	* CmdExec.cc: (PrintStatus) special case for CopyJobEnv in queue mode.

2000-02-04  Alexander V. Lukyanov  <lav@yars.free.net>

	* ProcWait.cc: if waitpid fails, check pid existence.

2000-02-02  Alexander V. Lukyanov  <lav@yars.free.net>

	* commands.cc: add -O option to help.
	* Http.cc: declare strptime if needed.
	* ftpclass.cc: handle "port theft" message in fxp mode.
	* FileCopyFtp.cc: check for reversing passive-source fixed; add
	  messages.
	* FileCopy.cc: add missing \n.

2000-02-01  Alexander V. Lukyanov  <lav@yars.free.net>

	* CopyJob.h: add GetETAStrSFromTime.
	* FileCopy.cc, FileCopy.h: split off Speedometer;
	  add GetETAStrSFromTime; pass reource name to Speedometer.
	* pgetJob.cc: call cp->GetETAStrSFromTime.
	* commands.cc: set old path before cd, so that after `open url'
	  `cd -' works; add --use-cache to mirror help.
	* Speedometer.cc, Speedometer.h: new files; accept resource name
	  instead of period.
	* ProcWait.cc: don't change state to ERROR at all (because process
	  can still run after waitpid fails)
	* FtpListInfo.cc: more verbose status.
	* FtpSplitList.cc, FtpSplitList.h: measure rate.
	* MirrorJob.cc: show only li->Status(); add use_cache member;

2000-01-31  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileAccess.h, FileAccess.cc: add NO_PASSWORD option for GetFileURL.