@@ -1,3 +1,7 @@
+2000-02-11  Alexander V. Lukyanov  <lav@yars.free.net>
+
+	* CopyJob.cc: print rate using Speedometer::GetStr.
+
 2000-02-09  Alexander V. Lukyanov  <lav@yars.free.net>
 
 	* CopyJob.cc, CopyJob.h: don't use putchar; print summary when Done().
